# Windows-DLL-Injector

./: .gitignore  CMakeLists.txt  README.md
CMake/: Utils.cmake
Injector/: CMakeLists.txt  Injector.vcxproj
Injector/src/: CreateRemoteThread.cpp  GetOperatingSystemInfo.cpp  Injector.cpp  Injector.h  NtCreateThreadEx.cpp  QueueUserAPC.cpp  RaiseToSystemLevel.cpp  RtlCreateUserThread.cpp  SetWindowsHookEx.cpp
PayloadDLL/: CMakeLists.txt  PayloadDLL.vcxproj  PayloadDLL.vcxproj.filters
PayloadDLL/src/: APIHook.cpp  APIHook.h  Payload.cpp  Payload.h  functions.cpp  functions.h
TargetProgram/: CMakeLists.txt  TargetProgram.vcxproj
TargetProgram/src/: Target.cpp
